fix slider's images align on mobile
Ignore-this: d1eb014100e32cca40f0aa8fe93d0a17

darcs-hash:20130628103511-88306-e46302b2578f5e7ced307d3c475946ae93d8dd25

--- a/web_app/static/css/graffiti.css
+++ b/web_app/static/css/graffiti.css
@@ -258,10 +258,11 @@ canvas
     margin-left: 8px;
 }
 
+/* the vertical align is make direclty with image's height */
 .grf_slider_slider
 {
     background-image: url('/img/maxibrush.png'), url('/img/minibrush.png');
     background-repeat: no-repeat, no-repeat;
-    background-position: center 4px, center bottom 3px;
+    background-position: center top, center bottom;
     height: 92%;
 }
